--- a/build.gradle
+++ b/build.gradle
@@ -7,5 +7,7 @@ axelor {
 
 dependencies {
 	api project(":modules:axelor-account")
+	api project(":modules:axelor-business-project")
+	api project(":modules:axelor-cash-management")
 }
 
