--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,8 @@ dependencies {
 	api project(":modules:axelor-account")
 	api project(":modules:axelor-business-project")
 	api project(":modules:axelor-cash-management")
+	api project(":modules:axelor-purchase")
+	api project(":modules:axelor-sale")
+	api project(":modules:axelor-stock")
 }
 
