added sales report

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ dependencies {
 	api project(":modules:axelor-sale")
 	api project(":modules:axelor-stock")
 	api project(":modules:axelor-production")
+	api project(":modules:axelor-business-production")
+	
 	
 }
 
